static/style.css
:root {
  --justify-important: left;
  --justify-normal: left;
  --color-error: #F44336;
  --color-link-light: #2BA5FF;

  --color-bg-secondary: var(--color-accent);
}

@media (prefers-color-scheme: dark) {
    :root {
        --color-bg: #263238; /* material blue grey 900 */
        --color-bg-secondary: #455A64; /* material blue grey 700 */
    }
}

body {
  max-width: var(--width-content);
  margin: 0 auto;
  padding: 0 1em;
}

nav {
  margin-bottom: 0;
  flex-wrap: wrap;
}

nav a {
  text-decoration: none !important;
}

nav h6 {
  margin: 0;
}

header, footer, main {
  padding: 0;
}

#content div.highlight {
  background: none !important;
}

#links section {
  display: block;
}

a.broken {
  color: var(--color-error) !important;
}

/*
span.broken {
  color: var(--color-link-light);
}
*/

#content figcaption a {
  color: inherit;
  text-decoration: underline;
  font-weight: normal;
}

small a {
  color: var(--color-text-secondary);
  text-decoration: none;
  font-weight: normal;
}

#content blockquote {
  background-color: var(--color-accent);
  border-radius: var(--border-radius);
  max-width: none;
  padding: 0.1rem 1rem;
  font-size: inherit;
}

#content pre {
  margin: 0;
  padding: 0;
  max-width: 100%;
}

#content pre code {
  max-width: 100%;
  min-width: 100%;
  padding: 1rem;
  margin: 0.5em 0;
  overflow-x: auto;
  overflow-y: hidden;
  display: inline-block;
  background-color: var(--color-bg-secondary);
  box-sizing: border-box;
}

#content .tabbed-content pre code {
  padding: 0;
  background-color: transparent;
}

#content code {
  padding: 0;
  display: inline;
  background-color: transparent;
}

hr {
  margin: 2rem 0;
}

#content blockquote ul {
  margin-left: 1rem;
  padding: 0;
}

a {
  font-weight: normal;
}

#content main h1 {
  font-size: x-large;
}

#content main h2 {
  font-size: larger;
}

#content main h3, h4, h5, h6 {
  font-size: large;
}

h1 {
  font-size: xx-large;
}

h2, h3 {
  font-size: x-large;
}

h4 {
  font-size: larger;
}

h5 {
  font-size: large;
}

h6 {
  font-size: medium;
}

